--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bountium</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type = "text/css" href = "css/main.css">
-    <script src = "js/web3.js"></script>
-    <script src = "js/react.js"></script>
-    <script src = "js/react-dom.min.js"></script>
-    <script src = "js/browser.min.js"></script>
+    <script src = "js/lib/web3.js"></script>
+    <script src = "js/lib/react.js"></script>
+    <script src = "js/lib/react-dom.min.js"></script>
     <script src = "js/header.js"></script>
     <script src = "js/welcome.js"></script>
   </head>
