no more popover nonsense!

--- a/public/biz/index.html
+++ b/public/biz/index.html
@@ -9,13 +9,13 @@
     <script src = "../js/lib/web3.js"></script>
     <script src = "../js/lib/react.js"></script>
     <script src = "../js/lib/react-dom.min.js"></script>
-    <script src = "../js/components/NotOwnerError.js"></script>
     <script src = "../js/components/ProductCard.js"></script>
-    <script src = "../js/components/header.js"></script>
+    <script src = "../js/components/ModifyProduct.js"></script>
+    <script src = "../js/components/Navbar.js"></script>
     <script src = "../js/biz-dapp.js"></script>
   </head>
   <body>
-    <div id = "header"></div>
+    <div id = "navbar"></div>
     <div id = "workflow-container"></div>
     <div id = "dashboard"></div>
   </body>
