added tabs, separated code into more components

--- a/public/biz/index.html
+++ b/public/biz/index.html
@@ -11,6 +11,10 @@
     <script src = "../js/lib/react-dom.min.js"></script>
     <script src = "../js/components/ProductCard.js"></script>
     <script src = "../js/components/ModifyProduct.js"></script>
+    <script src = "../js/components/OrgOverview.js"></script>
+    <script src = "../js/components/CatalogueOverview.js"></script>
+    <script src = "../js/components/OpsOverview.js"></script>
+    <script src = "../js/components/CollabOverview.js"></script>
     <script src = "../js/components/Navbar.js"></script>
     <script src = "../js/biz-dapp.js"></script>
   </head>
