--- a/public/biz/index.html
+++ b/public/biz/index.html
@@ -22,5 +22,15 @@
     <div id = "navbar"></div>
     <div id = "workflow-container"></div>
     <div id = "dashboard"></div>
+    <footer class="text-muted">
+      <ul class="nav navbar-collapse">
+        <li class="nav-item ml-auto">
+          <a class="nav-link" href="http://bountium.org/privacy.pdf">Privacy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://bountium.org/terms.pdf">Terms</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
