--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,15 @@
   <body>
     <div id = "navbar"></div>
     <div id = "dashboard"></div>
+    <footer class="text-muted">
+      <ul class="nav navbar-collapse">
+        <li class="nav-item ml-auto">
+          <a class="nav-link" href="http://bountium.org/privacy.pdf">Privacy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://bountium.org/terms.pdf">Terms</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
