--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bountium</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type = "text/css" href = "css/main.css">
-    <script src = "js/lib/web3.js"></script>
-    <script src = "js/lib/react.js"></script>
-    <script src = "js/lib/react-dom.min.js"></script>
-    <script src = "js/components/Navbar.js"></script>
-    <script src = "js/welcome.js"></script>
+<!doctype html>
+<html data-n-head="">
+  <head data-n-head="">
+    <title data-n-head="true">Bountium Admin</title><meta data-n-head="true" charset="utf-8"><meta data-n-head="true" name="viewport" content="width=device-width,initial-scale=1"><meta data-n-head="true" data-hid="description" name="description" content="My first-class Nuxt.js project"><link data-n-head="true" rel="icon" type="image/png" href="/bountium-logo.png"><link data-n-head="true" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata|Montserrat:100,200,300,400,500,600,700,800,900&display=swap"><link rel="preload" href="/_nuxt/53a26cfb7185c97b55e9.js" as="script"><link rel="preload" href="/_nuxt/b58497f751b5b06badc8.js" as="script"><link rel="preload" href="/_nuxt/5b9f36d1b9284b39ca08.js" as="script"><link rel="preload" href="/_nuxt/9c8af0bb5ce53fcd621d.js" as="script">
   </head>
-  <body>
-    <div id = "navbar"></div>
-    <div id = "dashboard"></div>
-    <footer class="text-muted">
-      <ul class="nav navbar-collapse">
-        <li class="nav-item ml-auto">
-          <a class="nav-link" href="http://bountium.org/privacy.pdf">Privacy</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://bountium.org/terms.pdf">Terms</a>
-        </li>
-      </ul>
-    </footer>
-  </body>
+  <body data-n-head="">
+    <div id="__nuxt"><style>#nuxt-loading{visibility:hidden;opacity:0;position:absolute;left:0;right:0;top:0;bottom:0;display:flex;justify-content:center;align-items:center;flex-direction:column;animation:nuxtLoadingIn 10s ease;-webkit-animation:nuxtLoadingIn 10s ease;animation-fill-mode:forwards;overflow:hidden}@keyframes nuxtLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}@-webkit-keyframes nuxtLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}#nuxt-loading>div,#nuxt-loading>div:after{border-radius:50%;width:5rem;height:5rem}#nuxt-loading>div{font-size:10px;position:relative;text-indent:-9999em;border:.5rem solid #f5f5f5;border-left:.5rem solid #fff;-webkit-transform:translateZ(0);-ms-transform:translateZ(0);transform:translateZ(0);-webkit-animation:nuxtLoading 1.1s infinite linear;animation:nuxtLoading 1.1s infinite linear}#nuxt-loading.error>div{border-left:.5rem solid #ff4500;animation-duration:5s}@-webkit-keyframes nuxtLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes nuxtLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}</style><script>window.addEventListener("error",function(){var e=document.getElementById("nuxt-loading");e&&(e.className+=" error")})</script><div id="nuxt-loading" aria-live="polite" role="status"><div>Loading...</div></div></div>
+  <script type="text/javascript" src="/_nuxt/53a26cfb7185c97b55e9.js"></script><script type="text/javascript" src="/_nuxt/b58497f751b5b06badc8.js"></script><script type="text/javascript" src="/_nuxt/5b9f36d1b9284b39ca08.js"></script><script type="text/javascript" src="/_nuxt/9c8af0bb5ce53fcd621d.js"></script></body>
 </html>
