Revert "Merge branch 'ko-beta' into 'master'"
This reverts merge request !28

--- a/public/biz/index.html
+++ b/public/biz/index.html
@@ -5,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bountium</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type = "text/css" href = "css/main.css">
-    <script src = "js/lib/web3.js"></script>
-    <script src = "js/lib/react.js"></script>
-    <script src = "js/lib/react-dom.min.js"></script>
-    <script src = "js/components/Navbar.js"></script>
-    <script src = "js/welcome.js"></script>
+    <link rel="stylesheet" type = "text/css" href = "../css/main.css">
+    <script src = "../js/lib/web3.js"></script>
+    <script src = "../js/lib/react.js"></script>
+    <script src = "../js/lib/react-dom.min.js"></script>
+    <script src = "../js/components/ProductCard.js"></script>
+    <script src = "../js/components/ModifyProduct.js"></script>
+    <script src = "../js/components/OrgOverview.js"></script>
+    <script src = "../js/components/CatalogueOverview.js"></script>
+    <script src = "../js/components/OpsOverview.js"></script>
+    <script src = "../js/components/CollabOverview.js"></script>
+    <script src = "../js/components/Navbar.js"></script>
+    <script src = "../js/biz-dapp.js"></script>
   </head>
   <body>
     <div id = "navbar"></div>
+    <div id = "workflow-container"></div>
     <div id = "dashboard"></div>
     <footer class="text-muted">
       <ul class="nav navbar-collapse">
